--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,5 @@
 name: Qualys IAC Scan 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main 
-  schedule:
-    - cron:  '*/5 * * * *'
+on: workflow_dispatch
 jobs:
     Qualys_iac_scan:
         runs-on: ubuntu-latest
@@ -27,9 +19,3 @@ jobs:
                 PASS: ${{ secrets.PASSWORD }}
             with:
               directory: 'path of directory to scan (optional)'
-          
-          - name: Upload SARIF file
-            uses: github/codeql-action/upload-sarif@v3
-            if: always() 
-            with:
-                 sarif_file: response.sarif
