--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Qualys IAC Scan 
 on: workflow_dispatch
-#  schedule:
-#    - cron:  '*/5 * * * *'
+  #schedule:
+    #- cron:  '*/5 * * * *'
 jobs:
     Qualys_iac_scan:
         runs-on: ubuntu-latest
@@ -19,10 +19,11 @@ jobs:
                 URL: ${{ secrets.URL }}
                 UNAME: ${{ secrets.USERNAME }}
                 PASS: ${{ secrets.PASSWORD }}
-            - name: Upload SARIF file
+            #with:
+              #directory: 'path of directory to scan (optional)'
+          
+          - name: Upload SARIF file
             uses: github/codeql-action/upload-sarif@v3
             if: always() 
             with:
                  sarif_file: response.sarif
-          
-          
