--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
-name: Qualys IaC Scan
+name: Qualys IAC Scan
 
 on:
   workflow_dispatch:
+  # schedule:
+  #   - cron: '*/5 * * * *'
 
 permissions:
   contents: read
@@ -12,15 +14,12 @@ jobs:
   Qualys_iac_scan:
     runs-on: ubuntu-latest
     name: Qualys IaC Scan
-
     steps:
-      # Step 1️⃣: Checkout repo
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # Step 2️⃣: Run Qualys IaC Scan
       - name: Run Qualys IaC Scan
         uses: Qualys/github_action_qiac@main
         id: qiac
@@ -28,32 +27,35 @@ jobs:
           URL: ${{ secrets.URL }}
           UNAME: ${{ secrets.USERNAME }}
           PASS: ${{ secrets.PASSWORD }}
+        # If you want to specify folder explicitly, uncomment below:
+        # with:
+        #   directory: 'path of directory to scan (optional)'
 
-      # Step 3️⃣: Locate SARIF file dynamically across runner (broader search)
-      - name: Locate SARIF file
-        id: find_sarif
+      # Debugging step — lists files to find actual SARIF file name and path
+      - name: List files in workspace after scan
         run: |
-          echo "Searching for SARIF file in runner..."
-          FOUND_FILE=$(find /home/runner -type f -name "*.sarif" | head -n 1)
-          if [ -z "$FOUND_FILE" ]; then
-            echo "SARIF file not found!"
-            exit 1
-          fi
-          echo "✅ Found SARIF file at: $FOUND_FILE"
-          echo "sarif_path=$FOUND_FILE" >> $GITHUB_OUTPUT
+          echo "=== Files generated after Qualys IaC Scan ==="
+          ls -R ${{ github.workspace }}
 
-      # Step 4️⃣: Upload SARIF to GitHub Security tab (Code Scanning)
+      # Upload SARIF to GitHub Security tab (Code Scanning)
       - name: Upload SARIF to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
-          sarif_file: ${{ steps.find_sarif.outputs.sarif_path }}
+          # Handles both default and alternate SARIF filenames
+          sarif_file: |
+            qualys_iac_scan_results.sarif
+            response.sarif
+            ./output/response.sarif
 
-      # Step 5️⃣: Upload SARIF as downloadable artifact
+      # Upload SARIF as downloadable artifact (for manual inspection)
       - name: Upload SARIF file for download
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: qualys-iac-sarif-${{ github.run_number }}
-          path: ${{ steps.find_sarif.outputs.sarif_path }}
-          if-no-files-found: error
+          name: qualys-iac-sarif
+          path: |
+            qualys_iac_scan_results.sarif
+            response.sarif
+            ./output/response.sarif
+          if-no-files-found: warn
